[package]
name = "dyson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.183"
serde_json = "1.0.104"

[dev-dependencies]
serde_derive = { version = "1.0.183" }
quickcheck = "1"
quickcheck_macros = "1"